--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <ul id="linksList"></ul>
     </div>
   </div>
-
-  <script type="module" src="app.js"></script>
+<form id="shorten-form">
+  <input type="text" id="url-input" placeholder="أدخل الرابط الأصلي" required />
+  <button type="submit">اختصر</button>
+</form>
+<div id="result"></div>
+<script type="module" src="app.js"></script>
 </body>
 </html>
