--- a/index.html
+++ b/index.html
@@ -2,26 +2,80 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>اختصار الروابط</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f5f5;
+      color: #333;
+      text-align: center;
+      padding: 50px 20px;
+      direction: rtl;
+    }
+
+    h1 {
+      color: #0077ff;
+    }
+
+    form {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      display: inline-block;
+      max-width: 400px;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+
+    button {
+      padding: 12px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background-color: #0077ff;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005bcc;
+    }
+
+    #result {
+      margin-top: 20px;
+      font-size: 18px;
+    }
+
+    #result a {
+      color: #0077ff;
+      text-decoration: none;
+      word-break: break-all;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔗 اختصر روابطك بسهولة</h1>
-    <input type="url" id="originalLink" placeholder="أدخل الرابط الأصلي" />
-    <button id="shortenBtn">اختصر الآن</button>
 
-    <div id="linksContainer">
-      <h2>📄 روابطك المختصرة</h2>
-      <ul id="linksList"></ul>
-    </div>
-  </div>
-<form id="shorten-form">
-  <input type="text" id="url-input" placeholder="أدخل الرابط الأصلي" required />
-  <button type="submit">اختصر</button>
-</form>
-<div id="result"></div>
-<script type="module" src="app.js"></script>
+  <h1>🎯 أداة اختصار الروابط</h1>
+  
+  <form id="shorten-form">
+    <input type="text" id="url-input" placeholder="أدخل الرابط الأصلي هنا" required />
+    <button type="submit">اختصر الرابط</button>
+  </form>
+
+  <div id="result"></div>
+
+  <!-- Firebase و app.js -->
+  <script type="module" src="app.js"></script>
 </body>
 </html>
