--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
   <meta charset="UTF-8" />
   <title>اختصار الروابط</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: #f5f5f5;
+      background: #f0f0f0;
       color: #333;
       text-align: center;
       padding: 50px 20px;
       direction: rtl;
     }
-
     h1 {
       color: #0077ff;
+      margin-bottom: 30px;
     }
-
     form {
       background: white;
       padding: 20px;
@@ -28,7 +26,6 @@
       width: 100%;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-
     input[type="text"] {
       width: 100%;
       padding: 12px;
@@ -37,7 +34,6 @@
       border-radius: 6px;
       font-size: 16px;
     }
-
     button {
       padding: 12px 20px;
       font-size: 16px;
@@ -47,35 +43,27 @@
       color: white;
       cursor: pointer;
     }
-
     button:hover {
       background-color: #005bcc;
     }
-
     #result {
       margin-top: 20px;
       font-size: 18px;
     }
-
     #result a {
       color: #0077ff;
       text-decoration: none;
-      word-break: break-all;
+      word-break: break-word;
     }
   </style>
 </head>
 <body>
-
-  <h1>🎯 أداة اختصار الروابط</h1>
-  
+  <h1>🔗 اختصر رابطك بسهولة</h1>
   <form id="shorten-form">
     <input type="text" id="url-input" placeholder="أدخل الرابط الأصلي هنا" required />
     <button type="submit">اختصر الرابط</button>
   </form>
-
   <div id="result"></div>
-
-  <!-- Firebase و app.js -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
