--- a/redirect.html
+++ b/redirect.html
@@ -1,86 +1,48 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>جاري التحويل...</title>
-</head>
-<body>
-  <h2>⏳ يتم الآن تحويلك للرابط المطلوب...</h2>
-
+  <meta charset="UTF-8">
+  <title>جارٍ تحويلك...</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-    import {
-      getFirestore,
-      doc,
-      getDoc,
-      updateDoc,
-      increment,
-      arrayUnion
-    } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
+    import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyBP0oQPZ4E9zaOYZGNVjqWxyjXde2SnOxs",
       authDomain: "short-link8288.firebaseapp.com",
       projectId: "short-link8288",
-      storageBucket: "short-link8288.firebasestorage.app",
+      storageBucket: "short-link8288.appspot.com",
       messagingSenderId: "316156644329",
       appId: "1:316156644329:web:ed593b1e7e465a01901978",
       measurementId: "G-HFG4329G97"
     };
 
     const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    const db = getFirestore();
 
-    // قراءة معرف الرابط المختصر من الرابط
-    const urlParams = new URLSearchParams(window.location.search);
-    const linkID = urlParams.get("id");
+    const params = new URLSearchParams(window.location.search);
+    const id = params.get("id");
 
-    if (linkID) {
-      const linkRef = doc(db, "links", linkID);
-
-      getDoc(linkRef).then(async (docSnap) => {
+    if (id) {
+      const docRef = doc(db, "links", id);
+      getDoc(docRef).then(async (docSnap) => {
         if (docSnap.exists()) {
-          const data = docSnap.data();
-          const originalURL = data.originalURL;
-
-          // تحديد الزائر الحالي
-          const visitorID = getVisitorID();
-
-          const isUnique = !data.visitors.includes(visitorID);
-
-          // تحديث الإحصائيات
-          const updateData = {
-            totalClicks: increment(1),
-          };
-
-          if (isUnique) {
-            updateData.uniqueClicks = increment(1);
-            updateData.visitors = arrayUnion(visitorID);
-          }
-
-          await updateDoc(linkRef, updateData);
-
-          // التحويل للرابط الأصلي
-          window.location.href = originalURL;
+          const ip = await fetch("https://api.ipify.org?format=json").then(res => res.json()).then(d => d.ip);
+          await updateDoc(docRef, {
+            clicks: increment(1),
+            uniqueClicks: arrayUnion(ip),
+          });
+          location.href = docSnap.data().originalURL;
         } else {
-          document.body.innerHTML = "<h3>الرابط غير موجود</h3>";
+          document.body.innerHTML = "<h1>الرابط غير موجود</h1>";
         }
       });
     } else {
-      document.body.innerHTML = "<h3>رابط غير صحيح</h3>";
-    }
-
-    // توليد معرف الزائر (تخزينه محليًا)
-    function getVisitorID() {
-      const key = "visitorID";
-      let id = localStorage.getItem(key);
-      if (!id) {
-        id = Math.random().toString(36).substring(2, 12);
-        localStorage.setItem(key, id);
-      }
-      return id;
+      document.body.innerHTML = "<h1>لا يوجد معرف للرابط</h1>";
     }
   </script>
+</head>
+<body>
+  <h1>⏳ جاري تحويلك...</h1>
 </body>
 </html>
