--- a/redirect.html
+++ b/redirect.html
@@ -5,18 +5,9 @@
   <title>جارٍ تحويلك...</title>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-app.js";
-    import { getFirestore, doc, getDoc, updateDoc, increment, arrayUnion } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
+    import { getFirestore, doc, getDoc, updateDoc, increment } from "https://www.gstatic.com/firebasejs/11.8.1/firebase-firestore.js";
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyBP0oQPZ4E9zaOYZGNVjqWxyjXde2SnOxs",
-      authDomain: "short-link8288.firebaseapp.com",
-      projectId: "short-link8288",
-      storageBucket: "short-link8288.appspot.com",
-      messagingSenderId: "316156644329",
-      appId: "1:316156644329:web:ed593b1e7e465a01901978",
-      measurementId: "G-HFG4329G97"
-    };
-
+    const firebaseConfig = { /* نفس بياناتك */ };
     const app = initializeApp(firebaseConfig);
     const db = getFirestore();
 
@@ -27,18 +18,16 @@
       const docRef = doc(db, "links", id);
       getDoc(docRef).then(async (docSnap) => {
         if (docSnap.exists()) {
-          const ip = await fetch("https://api.ipify.org?format=json").then(res => res.json()).then(d => d.ip);
           await updateDoc(docRef, {
-            clicks: increment(1),
-            uniqueClicks: arrayUnion(ip),
+            clicks: increment(1)
           });
           location.href = docSnap.data().originalURL;
         } else {
-          document.body.innerHTML = "<h1>الرابط غير موجود</h1>";
+          document.body.innerHTML = "<h1>❌ الرابط غير موجود</h1>";
         }
       });
     } else {
-      document.body.innerHTML = "<h1>لا يوجد معرف للرابط</h1>";
+      document.body.innerHTML = "<h1>❌ لا يوجد معرف للرابط</h1>";
     }
   </script>
 </head>
