--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ar">
 <head>
   <meta charset="UTF-8" />
   <title>اختصار الروابط</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: #f0f0f0;
+      color: #333;
+      text-align: center;
+      padding: 50px 20px;
+      direction: rtl;
+    }
+    h1 {
+      color: #0077ff;
+      margin-bottom: 30px;
+    }
+    form {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      display: inline-block;
+      max-width: 400px;
+      width: 100%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    input[type="text"] {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 16px;
+    }
+    button {
+      padding: 12px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background-color: #0077ff;
+      color: white;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #005bcc;
+    }
+    #result {
+      margin-top: 20px;
+      font-size: 18px;
+    }
+    #result a {
+      color: #0077ff;
+      text-decoration: none;
+      word-break: break-word;
+    }
+  </style>
 </head>
 <body>
   <h1>🔗 اختصر رابطك بسهولة</h1>
