--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h1>❌ عذرًا، هذا الرابط غير صالح</h1>
-  <a href="/">العودة للصفحة الرئيسية</a>
+  <a href="index.html">العودة للصفحة الرئيسية</a>
 </body>
 </html>
