--- a/404.html
+++ b/404.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>الرابط غير موجود</title>
+  <title>الصفحة غير موجودة</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>❌ عذرًا، هذا الرابط غير صالح</h1>
-  <a href="index.html">العودة للصفحة الرئيسية</a>
+  <div class="error-container">
+    <h1>404 - الصفحة غير موجودة</h1>
+    <p>عذرًا، الصفحة التي تبحث عنها غير موجودة.</p>
+    <a href="index.html" class="home-link">العودة للصفحة الرئيسية</a>
+  </div>
 </body>
 </html>
